@@ -1,5 +1,11 @@
 2007-10-24  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-themes.c: (theme_load_from_gconf),
+	(theme_details_changed_cb), (themes_init): return a new theme instead
+	of munging whatever got passed in. Makes for a saner API
+
+2007-10-24  Jens Granseuer  <jensgr@gmx.net>
+
 	The fix for bug #420154 not only made the entry for the theme installer
 	disappear from the menu, but also disabled mime-type handling for Gnome
 	Theme Packages (bug #486811). Revert that change and use NoDisplay=true
